Revision history for IO::CaptureOutput

1.04_02

    - added support for capture() merging STDERR and STDOUT to the same
      scalar, i.e. "capture( \&foo, \$out, \$out )" (RT#24695)

    - added capture_exec_combined() and alias qxy() to merge STDERR and STDOUT
      for subprocess execution (RT#29289)
    
    - bugfix: stop crashing if output filehandles are previously closed or
      if running without a console on MSWin32 (i.e. wperl.exe) (RT#23676)

1.04_01 Mon Oct 29 22:56:45 EDT 2007

    - DAGOLDEN added as maintainer; updated build system and packaging for 
      ongoing maintenance

    - bugfix: capture.t would fail on Win32 if Inline::C was installed; 
      fixed the sample C code used in testing to flush stderr (RT#21712)

    - bugfix: was failing on perl 5.8.0 due to extraneous space in call 
      to open(); removing the space fixed the bug (RT#22044)
      

1.03  2005-03-25
    - Add t/pod_coverage.t

1.02  2004-11-22
    - add extra quoting on Win32 platform
    - Win32 won't unlink a file that is open in write mode, so close it first
    - minor POD tweaks

1.0  2004-11-21
    - Initial revision