@@ -13,6 +13,8 @@ README
 t/capture.t
 t/capture_exec.t
 t/noconsole.t
+t/scripts/wperl-capture.pl
+t/scripts/wperl-exec.pl
 t/wperl.t
 xt/critic.t
 xt/perlcriticrc
