@@ -1,4 +1,4 @@
-# Generated by Pod::WikiDoc version 0.16
+# Generated by Pod::WikiDoc version 0.18
 
 =pod
 
@@ -13,34 +13,37 @@ This documentation describes version 1.04_02.
 
 =head1 SYNOPSIS
 
-     use IO::CaptureOutput qw(capture capture_exec qxx);
+     use IO::CaptureOutput qw(capture capture_exec);
  
      my ($stdout, $stderr);
-     capture sub {noisy(@args)}, \$stdout, \$stderr;
+ 
      sub noisy {
-         my @args = @_;
          warn "this sub prints to stdout and stderr!";
-         ...
-         print "finished";
+         print "arguments: @_";
      }
  
+     capture sub {noisy(@args)}, \$stdout, \$stderr;
+ 
      ($stdout, $stderr) = capture_exec( 'perl', '-e', 
-         'print "Hello "; print STDERR "World!"');
+         'print "Hello"; print STDERR "World!"');
 
 =head1 DESCRIPTION
 
-This module provides routines for capturing STDOUT and STDERR from forked
-system calls (e.g. C<<< system() >>>, C<<< fork() >>>) and from XSE<sol>C modules.
+This module provides routines for capturing STDOUT and STDERR from perl 
+subroutines, forked system calls (e.g. C<<< system() >>>, C<<< fork() >>>) and from 
+XS or C modules.
 
 =head1 FUNCTIONS
 
-The following functions are be exported on demand.
+The following functions will be exported on demand.
 
-=head2 C<<< capture(\&subroutine, \$output, \$error) >>>
+=head2 capture()
+
+     capture(\&subroutine, \$stdout, \$stderr);
 
 Captures everything printed to C<<< STDOUT >>> and C<<< STDERR >>> for the duration of
-C<<< &subroutine >>>. C<<< $output >>> and C<<< $error >>> are optional scalar references that
-will contain C<<< STDOUT >>> and C<<< STDERR >>> respectively. 
+C<<< &subroutine >>>. C<<< $stdout >>> and C<<< $stderr >>> are optional scalars that will contain
+C<<< STDOUT >>> and C<<< STDERR >>> respectively. 
 
 Returns the return value(s) of C<<< &subroutine >>>. The sub is called in the same
 context as C<<< capture() >>> was called e.g.:
@@ -49,53 +52,57 @@ context as C<<< capture() >>> was called e.g.:
      $rv = capture(sub {wantarray}); # returns defined, but not true
      capture(sub {wantarray});       # void, returns undef
 
-C<<< capture() >>> is able to trap output from subprocesses and C code, which
-traditional C<<< tie() >>> methods are unable to capture.
+C<<< capture() >>> is able to capture output from subprocesses and C code, which
+traditional C<<< tie() >>> methods of output capture are unable to do.
 
-If C<<< $output >>> and C<<< $error >>> refer to the same scalar, then C<<< STDERR >>> will be
+If the two scalar references refer to the same scalar, then C<<< STDERR >>> will be
 merged to C<<< STDOUT >>> before capturing and the scalar will hold the combined
 output of both.
+
+     capture(\&subroutine, \$combined, \$combined);
 
 B<Note:> C<<< capture() >>> will only capture output that has been written or flushed
 to the filehandle.
 
-=head2 C<<< capture_exec(@args) >>>
+=head2 capture_exec()
+
+     ($stdout, $stderr) = capture_exec(@args);
 
 Captures and returns the output from C<<< system(@args) >>>. In scalar context,
 C<<< capture_exec() >>> will return what was printed to C<<< STDOUT >>>. In list context,
 it returns what was printed to C<<< STDOUT >>> and C<<< STDERR >>>
 
-     my $output = capture_exec('perl', '-e', 'print "hello world"');
+     $stdout = capture_exec('perl', '-e', 'print "hello world"');
  
-     my ($output, $error) = capture_exec('perl', '-e', 'warn "Test"');
+     ($stdout, $stderr) = capture_exec('perl', '-e', 'warn "Test"');
 
-C<<< capture_exec >>> passes its arguments to C<<< system() >>> and it can take advantage
-of shell quoting, which makes it a handy and slightly more portable
-alternative to backticks, piped C<<< open() >>> and C<<< IPC::Open3 >>>.
+C<<< capture_exec >>> passes its arguments to C<<< system() >>> and on MSWin32 will protect
+arguments with shell quotes if necessary.  This makes it a handy and slightly
+more portable alternative to backticks, piped C<<< open() >>> and C<<< IPC::Open3 >>>.
 
 You can check the exit status of the C<<< system() >>> call with the C<<< $? >>>
 variable. See L<perlvar> for more information.
 
-=head2 C<<< capture_exec_combined(@args) >>>
+=head2 capture_exec_combined()
 
-This is just like C<<< capture_exec >>>, except that it merges C<<< STDERR >>> with C<<< STDOUT >>>
-before capturing the output and returns a single scalar.
-
-     my $merged = capture_exec_combined(
+     $combined = capture_exec_combined(
          'perl', '-e', 'print "hello\n"', 'warn "Test\n"
      );
 
-B<Note:> there is no guarantee that lines printed to C<<< STDOUT >>> and C<<< STDERR >>> in
-the subprocess will be in order. The actual order will depend largely on how IO
+This is just like C<<< capture_exec() >>>, except that it merges C<<< STDERR >>> with C<<< STDOUT >>>
+before capturing output and returns a single scalar.
+
+B<Note:> there is no guarantee that text printed to C<<< STDOUT >>> and C<<< STDERR >>> in the
+subprocess will be appear in order. The actual order will depend on how IO
 buffering is handled in the subprocess.
 
-=head2 C<<< qxx(@args) >>>
+=head2 qxx()
 
-This is an alias of C<<< capture_exec >>>
+This is an alias for C<<< capture_exec() >>>.
 
-=head2 C<<< qxy(@args) >>>
+=head2 qxy()
 
-This is an alias of C<<< capture_exec_combined >>>
+This is an alias for C<<< capture_exec_combined() >>>.
 
 =head1 SEE ALSO
 
